4.1/_build/_log
### Starting build.
# Target: eval.ml.depends, tags: { extension:ml, file:eval.ml, ocaml, ocamldep, quiet }
/Users/user/.opam/4.10.0/bin/ocamldep.opt -modules eval.ml > eval.ml.depends
# Target: ast.ml.depends, tags: { extension:ml, file:ast.ml, ocaml, ocamldep, quiet }
/Users/user/.opam/4.10.0/bin/ocamldep.opt -modules ast.ml > ast.ml.depends # cached
# Target: ast.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:ast.cmo, file:ast.ml, implem, ocaml, quiet }
/Users/user/.opam/4.10.0/bin/ocamlc.opt -c -o ast.cmo ast.ml # cached
# Target: printing.ml.depends, tags: { extension:ml, file:printing.ml, ocaml, ocamldep, quiet }
/Users/user/.opam/4.10.0/bin/ocamldep.opt -modules printing.ml > printing.ml.depends # cached
# Target: printing.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:printing.cmo, file:printing.ml, implem, ocaml, quiet }
/Users/user/.opam/4.10.0/bin/ocamlc.opt -c -o printing.cmo printing.ml # cached
# Target: eval.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:eval.cmo, file:eval.ml, implem, ocaml, quiet }
/Users/user/.opam/4.10.0/bin/ocamlc.opt -c -o eval.cmo eval.ml
+ /Users/user/.opam/4.10.0/bin/ocamlc.opt -c -o eval.cmo eval.ml
File "eval.ml", line 13, characters 25-33:
13 | let _ = string_of_const (constant 12)
                              ^^^^^^^^
Error: Unbound value constant
Command exited with code 2.
# Compilation unsuccessful.
